--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/katex": "^0.16.8",
     "autoprefixer": "^10.4.24",
+    "katex": "^0.16.28",
     "lucide-react": "^0.564.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
